RESOLVED FIXED134151
[WK2] Frameset frames are not scrollable after loading (and should be)
https://bugs.webkit.org/show_bug.cgi?id=134151
Summary [WK2] Frameset frames are not scrollable after loading (and should be)
Simon Fraser (smfr)
Reported 2014-06-20 21:25:06 PDT
[WK2] Frameset frames are not scrollable after loading (and should be)
Attachments
Patch (6.74 KB, patch)
2014-06-20 21:28 PDT, Simon Fraser (smfr)
dbates: review+
buildbot: commit-queue-
Archive of layout-test-results from webkit-ews-14 for mac-mountainlion-wk2 (851.60 KB, application/zip)
2014-06-20 23:03 PDT, Build Bot
no flags
Simon Fraser (smfr)
Comment 1 2014-06-20 21:28:39 PDT
Daniel Bates
Comment 2 2014-06-20 21:59:01 PDT
Comment on attachment 233505 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=233505&action=review > LayoutTests/ChangeLog:11 > + * platform/mac-wk2/tiled-drawing/scrolling/frames/frameset-frame-scrollability.html: Added. > + * platform/mac-wk2/tiled-drawing/scrolling/frames/resources/scrollable-page.html: Added. Where are the expected results for these tests?
Build Bot
Comment 3 2014-06-20 23:03:30 PDT
Comment on attachment 233505 [details] Patch Attachment 233505 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/5630706428411904 New failing tests: platform/mac-wk2/tiled-drawing/scrolling/frames/frameset-frame-scrollability.html
Build Bot
Comment 4 2014-06-20 23:03:33 PDT
Created attachment 233510 [details] Archive of layout-test-results from webkit-ews-14 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-14 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Simon Fraser (smfr)
Comment 5 2014-06-22 11:28:40 PDT
Simon Fraser (smfr)
Comment 6 2014-06-22 11:36:16 PDT
Alexey Proskuryakov
Comment 7 2015-07-25 18:41:28 PDT
The test added here is super flaky; and I suspect that this change made another subframe scrolling test super flaky too. See bug 147300.
Note You need to log in before you can comment on or make changes to this bug.